--- a/UI/index.html
+++ b/UI/index.html
@@ -63,7 +63,7 @@
 				<p>Path (if left empty default path will be used)</p>
 				<input type="text" class="new-path"/>
 				<p>Torrent Url</p>
-				<input type="text" class="new-torrent" value="http://example.com/xyz.torrent" />
+				<input type="text" class="new-torrent" value="http://releases.ubuntu.com/11.10/ubuntu-11.10-alternate-amd64.iso.torrent" />
 				<input type="submit" value="Download" />
 			</form>
 			<span class="error-torrent"></span>
