--- a/UI/index.html
+++ b/UI/index.html
@@ -44,7 +44,7 @@
 					<a href="#" class="row-action arrowdown hard-disabled" onclick="postCommand('prioritydown')"></a>
 				</div>
 				<div class="image-container">
-					<a href="#" class="eject" onclick="postCommand('exit')"></a>
+					<a href="#" class="eject hard-disabled" onclick="postCommand('exit')" ></a>
 				</div>
 				<div class="image-container">
 					<a href="#" class="settings hard-disabled" onclick="postCommand('settings')"></a>
