--- a/UI/index.html
+++ b/UI/index.html
@@ -65,8 +65,10 @@
 				<p>Torrent Url</p>
 				<input type="text" class="new-torrent" value="http://releases.ubuntu.com/11.10/ubuntu-11.10-alternate-amd64.iso.torrent" />
 				<input type="submit" value="Download" />
+				<span class="error-torrent"></span>
+				<p>Or select of the following links</p>
+				<div class="torrent-links"></div>
 			</form>
-			<span class="error-torrent"></span>
 		</div>
 	</body>
 </html>
