--- a/UI/index.html
+++ b/UI/index.html
@@ -52,8 +52,8 @@
 				<div class="spacer"></div>
 			</div>
 			<div id="downloads-field">
-				<table class="downloads-table">
-				</table>
+				<div class="downloads-table">
+				</div>
 			</div>
 			<div class="east-south">
 			</div>
