--- a/UI/index.html
+++ b/UI/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta content="en" http-equiv="Content-Language">
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-		<title>3-pane splitter</title>
+		<title>Unbound Bittorent client</title>
 		<link rel="icon" type="image/png" href="favicon.png">
 		<script type="text/javascript" src="js/jquery-1.6.4.min.js"></script>
 		<script type="text/javascript" src="js/jquery-ui-1.8.16.custom.min.js"></script>
