UDP tracker implemented, UI improved alooot

--- a/UI/index.html
+++ b/UI/index.html
@@ -61,9 +61,9 @@
 		<div id="torrent_dialog" class="popup_block">
 			<form id="target" action="#">
 				<p>Path (if left empty default path will be used)</p>
-				<input type="text" class="new-path"/>
+				<input type="text" class="new-path auto-hint" title="/home/downloads/">
 				<p>Torrent Url</p>
-				<input type="text" class="new-torrent" value="http://releases.ubuntu.com/11.10/ubuntu-11.10-alternate-amd64.iso.torrent" />
+				<input type="text" class="new-torrent auto-hint" title="http://x.com/y.torrent" />
 				<input type="submit" value="Download" />
 				<span class="error-torrent"></span>
 				<p>Or select of the following links</p>
